DEV-Microk8s/portainer_deployment/portainer-ingress.yaml
# Ingress yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ingress
  namespace: portainer # MUST match the namespace where your app's service lives
  annotations:
    # Specify the cert-manager resource
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - portainer.dev.k8s.powersstudios.net # The URL you want to use
    # cert-manager will automatically create this Secret and store the certificate here
    secretName: portainer-tls-secret
  rules:
  - host: portainer.dev.k8s.powersstudios.net # The URL you want to use
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portainer-clusterip-svc # The exact name of your app's ClusterIP service
            port:
              number: 9000 # The internal port your app uses
